# zodiac

./: .gitignore  CMakeLists.txt  doxyfile.in
src/: zodiac.c
src/include/zodiac/instruction/: instruction.h  instruction_reader.c  instruction_reader.h  instruction_reader_offset.h  instruction_reader_read_callback.h  instruction_reader_seek_callback.h  instruction_reader_tell_callback.h
src/include/zodiac/platform/: platform.h  platform_arch.h  platform_callback_sender.h  platform_compiler.h  platform_compiler_specifiers.h  platform_config.h  platform_os.h  platform_types.h  platform_types_bool.h  platform_types_int.h  platform_types_limits.h  platform_types_limits_int.h  platform_types_limits_size.h  platform_types_limits_ssize.h  platform_types_nullptr.h  platform_types_size.h  platform_types_ssize.h
src/include/zodiac/runtime/: runtime_logger.h
src/include/zodiac/runtime/logger/: logger.c  logger.h  logger_level.c  logger_level.h  logger_log_level.h
